updated h1 for color contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ img {
 
 h1{
     /* font-size: 24px; */
-    color: #1c898a;
+    color:#146061;
     padding: 10%;
     text-align: center;
     opacity: 1;
